# railway-mlflow-stack

./: .gitattributes  .gitignore  CLAUDE.md  README.md  README.new.md  docker-compose.yml
caddy/: Caddyfile  dockerfile  startup.sh
minio/: dockerfile  startup.sh
mlflow/: dockerfile  startup.sh
mlflow-examples/: .env.example  .gitignore  README.md  example_run.py  main.py  openai_example.py  pyproject.toml
