[project]
name = "mlflow-dev-template"
version = "1.0.0"
description = "MLflow development environment template for connecting to remote tracking servers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Mykal Machon", email = "mykal@tinybox.dev"},
]
keywords = ["mlflow", "machine-learning", "tracking", "template", "railway"]
dependencies = [
	"mlflow>=3.3.1",
	"openai>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py", "*.md", "*.toml", ".env.example"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
